[project]
name = "dpy-wav-sample"
version = "0.1.0"
description = "discord.pyでwavファイルをFFmpegなしで再生するサンプルプログラム。"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "audioop-lts>=0.2.1",
    "davey>=0.1.5",
    "discord-py>=2.7.1",
    "pynacl>=1.5.0",
    "python-dotenv>=1.1.1",
]
