[project]
name = "dpy-wav-sample"
version = "0.1.1"
description = "discord.pyでwavファイルをFFmpegなしで再生するサンプルプログラム。"
readme = "README.md"
license = "0BSD"
requires-python = ">=3.14.0"
dependencies = [
    "audioop-lts>=0.2.2",
    "davey>=0.1.5",
    "discord-py>=2.7.1",
    "pynacl>=1.6.2",
    "python-dotenv>=1.2.2",
]
